--- a/src/main/resources/templates/assign_course_form.html
+++ b/src/main/resources/templates/assign_course_form.html
@@ -107,15 +107,11 @@
         </option>
     </select>
 
-
-
-
-
     <label for="users">Course Teacher:</label>
     <select id="users" th:field="*{user}" required>
         <option value="">-- Select Course Teacher --</option>
         <option th:each="u : ${users}"
-                th:value="${u.user_id}"
+                th:value="${u.userId}"
                 th:text="${u.name}">
         </option>
     </select>
