--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -31,6 +31,7 @@
             border-radius: 8px;
             box-shadow: 0 6px 18px rgba(0,0,0,0.1);
             width: 350px;
+            text-align: center;
         }
 
         label {
@@ -38,6 +39,7 @@
             font-weight: 600;
             margin-bottom: 6px;
             color: #555;
+            text-align: left;
         }
 
         input[type="text"],
@@ -86,8 +88,10 @@
 </head>
 <body>
 <form th:action="@{/login}"  method="post">
-    <h2>User Login</h2>
 
+    <img src="/logo.PNG" alt="mbstu-logo" style="height:80px; width:80px">
+
+    <h2>User Login</h2>
     <label for="email">Enter Email:</label>
     <input id="email" name="email" type="text"  required/>
 
