--- a/src/main/resources/templates/all_semesters.html
+++ b/src/main/resources/templates/all_semesters.html
@@ -131,6 +131,7 @@
         <tr>
             <th>Semester ID</th>
             <th>Held Year</th>
+            <th>Held Months</th>
             <th>Scheduled Year</th>
             <th>Semester</th>
             <th>Actions</th>
@@ -160,6 +161,7 @@
                 row.innerHTML = `
                     <td>${semester.semesterId}</td>
                     <td>${semester.semesterHeldYear}</td>
+                    <td>${semester.semesterHeldMonths}</td>
                      <td>${semester.semesterScheduledYear}</td>
                     <td>${semester.semesterParity}</td>
                     <td class="actions">
