--- a/src/main/resources/templates/all_users.html
+++ b/src/main/resources/templates/all_users.html
@@ -28,7 +28,7 @@
         a.add-new {
             display: inline-block;
             margin-bottom: 20px;
-            background-color: #4CAF50;
+            background: linear-gradient(to right, #667eea 0%, #764ba2 100%);
             color: white;
             text-decoration: none;
             padding: 10px 18px;
@@ -39,7 +39,8 @@
         }
 
         a.add-new:hover {
-            background-color: black;
+            background: black;
+            color: white;
         }
 
 
@@ -50,7 +51,7 @@
         }
 
         thead {
-            background-color: #4CAF50;
+            background: linear-gradient(to right, #667eea 0%, #764ba2 100%);
             color: white;
         }
 
@@ -81,7 +82,6 @@
             color: red;
         }
 
-        /* horizontal scroll on small screens */
         @media (max-width: 600px) {
             .container {
                 padding: 15px 10px;
@@ -90,7 +90,7 @@
                 display: block;
             }
             thead tr {
-                display: none; /* Hide table header on small */
+                display: none;
             }
             tbody tr {
                 margin-bottom: 20px;
